--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,6 +164,8 @@ jobs:
       - lint-check
       - vuln-check
     if: github.ref == 'refs/heads/main'
+    outputs:
+      version: ${{ steps.calculate_version.outputs.majorMinorPatch }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -257,34 +259,50 @@ jobs:
         draft: false
         prerelease: false
     
-    - name: Refresh pkg.go.dev cache
+    - name: Refresh pkg.go.dev cache for main module
       env:
-        MODULES: ${{ needs.discover.outputs.modules }}
         VERSION: ${{ steps.calculate_version.outputs.majorMinorPatch }}
       run: |
         # Request pkg.go.dev to fetch the new main module version
         echo "Requesting pkg.go.dev refresh for main module v$VERSION"
         curl -s "https://proxy.golang.org/github.com/!my!carrier-!dev!ops/go!lib!my!carrier/@v/v$VERSION.info" || true
         
-        # Request pkg.go.dev to fetch each submodule version
-        for module in $(echo "$MODULES" | jq -r '.[]'); do
-          # Convert module path to Go module proxy format (uppercase letters become !lowercase)
-          ENCODED_MODULE=$(echo "$module" | sed 's/\([A-Z]\)/!\L\1/g')
-          echo "Requesting pkg.go.dev refresh for $module/v$VERSION"
-          curl -s "https://proxy.golang.org/github.com/!my!carrier-!dev!ops/go!lib!my!carrier/$ENCODED_MODULE/@v/v$VERSION.info" || true
-        done
-        
-        # Give the proxy a moment to process, then trigger pkg.go.dev documentation fetch
-        sleep 5
+        # Give the proxy a moment to process
+        sleep 2
         
         # Trigger documentation generation for main module
         echo "Triggering pkg.go.dev documentation for main module"
         curl -s "https://pkg.go.dev/github.com/MyCarrier-DevOps/goLibMyCarrier@v$VERSION" > /dev/null || true
-        
-        # Trigger documentation generation for each submodule
-        for module in $(echo "$MODULES" | jq -r '.[]'); do
-          echo "Triggering pkg.go.dev documentation for $module"
-          curl -s "https://pkg.go.dev/github.com/MyCarrier-DevOps/goLibMyCarrier/$module@v$VERSION" > /dev/null || true
-        done
-        
-        echo "pkg.go.dev refresh requests completed"
+
+  # Refresh pkg.go.dev cache for each module in parallel
+  refresh-pkg-cache:
+    name: refresh-pkg-${{ matrix.module }}
+    runs-on: ubuntu-latest
+    needs:
+      - discover
+      - release
+    strategy:
+      fail-fast: false
+      matrix:
+        module: ${{ fromJson(needs.discover.outputs.modules) }}
+    steps:
+      - name: Refresh pkg.go.dev cache for ${{ matrix.module }}
+        env:
+          MODULE: ${{ matrix.module }}
+          VERSION: ${{ needs.release.outputs.version }}
+        run: |
+          # Convert module path to Go module proxy format (uppercase letters become !lowercase)
+          ENCODED_MODULE=$(echo "$MODULE" | sed 's/\([A-Z]\)/!\L\1/g')
+          
+          # Request pkg.go.dev to fetch the submodule version via Go proxy
+          echo "Requesting pkg.go.dev refresh for $MODULE/v$VERSION"
+          curl -s "https://proxy.golang.org/github.com/!my!carrier-!dev!ops/go!lib!my!carrier/$ENCODED_MODULE/@v/v$VERSION.info" || true
+          
+          # Give the proxy a moment to process
+          sleep 2
+          
+          # Trigger documentation generation for the submodule
+          echo "Triggering pkg.go.dev documentation for $MODULE"
+          curl -s "https://pkg.go.dev/github.com/MyCarrier-DevOps/goLibMyCarrier/$MODULE@v$VERSION" > /dev/null || true
+          
+          echo "pkg.go.dev refresh completed for $MODULE"
